<resources>
    <string name="app_name">Lista ToDo</string>
    <string name="task_done_label">Wykonano zadanie</string>
    <string name="task_details_label">Szczegóły zadania</string>
    <string name="task_name_hint">Idź na spacer</string>
    <string name="task_name_label">Zadanie </string>
    <string name="show_name_in_details_label">Umieść nazwę zadania w szczegółach</string>

    <string name="task_add_new">Nowe zadanie</string>
    <string name="show_subtitle">Pokaż podtytuł</string>
    <string name="hide_subtitle">Ukryj podtytuł</string>
    <string name="subtitle_format">%1$d zadań</string>
</resources>