<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">


    <TextView
        style="@style/TextFieldsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name_label" />

    <EditText
        android:id="@+id/task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_details_label" />

    <Button
        android:id="@+id/task_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHighlight="@color/white"/>


    <CheckBox
        android:id="@+id/show_name_in_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_name_in_details_label"/>

    <CheckBox
        android:id="@+id/task_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_done_label" />


</LinearLayout>